--- a/lab3/index.html
+++ b/lab3/index.html
@@ -25,7 +25,7 @@
             mollitia incidunt, ipsam, accusantium itaque repudiandae facere
             aspernatur labore odio nam optio facilis reiciendis veniam soluta
             qui nostrum fugit eos similique. Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Alias, mollitia incidunt, ipsam,
+            consectetur adipisicing elit. Alias mollitia incidunt, ipsam,
           </p>
           <ul class="list">
             <li>something useful</li>
